@@ -43,6 +43,8 @@ extern void (*biosA0[256])();
 extern void (*biosB0[256])();
 extern void (*biosC0[256])();
 
+extern boolean hleSoftCall;
+
 #ifdef __cplusplus
 }
 #endif
